fixed image stretch bug

--- a/app/assets/stylesheets/site_main_page.scss
+++ b/app/assets/stylesheets/site_main_page.scss
@@ -97,7 +97,7 @@
         .img {
           display: flex;
           justify-content: center;
-          align-content: center;
+          align-items: center;
           padding: 1em 0;
           img {
             width: 50%;
